Redo of the Data Migration page

--- a/src/package.xml
+++ b/src/package.xml
@@ -126,6 +126,7 @@
         <members>wizard</members>
         <members>lookup</members>
         <members>MigrationWizardComponent</members>
+        <members>migrationStep</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
