add test class to the package.xml

--- a/src/package.xml
+++ b/src/package.xml
@@ -19,6 +19,7 @@
         <members>SCMT_Utils</members>
         <members>SCMT_Utils_Test</members>
         <members>MigrationWizardController</members>
+        <members>MigrationWizardControllerTest</members>
         <name>ApexClass</name>
     </types>
     <types>
